--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <title>Restaurant Menu</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <link rel="stylesheet" href="styles.css">
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet"> <!-- Include Google Fonts -->
-  <link rel="icon" type="image/png" href="favicon.ico"> <!-- Add this line -->
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet">
+  <link rel="icon" type="image/png" href="favicon.ico">
   <style>
     /* Add your custom styles here */
     #logo {
@@ -23,9 +23,9 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      background-color: #fff; /* Adjust background to blend */
-      padding: 5px; /* Optional: Add padding around the logo */
-      border-radius: 10px; /* Optional: Round the corners */
+      background-color: #fff;
+      padding: 5px;
+      border-radius: 10px;
     }
 
     .menu-item:hover {
@@ -53,7 +53,7 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
+      <ul class="navbar-nav mr-auto">
         <li class="nav-item">
           <a class="nav-link" href="#" data-filter="all">All</a>
         </li>
@@ -70,8 +70,8 @@
           <a class="nav-link" href="#" data-filter="beverages">Beverages</a>
         </li>
       </ul>
+      <input type="text" id="search-input" class="form-control ml-auto" placeholder="Search menu items...">
     </div>
-    <input type="text" id="search-input" class="form-control ml-auto" placeholder="Search menu items...">
   </nav>
 
   <div class="container">
@@ -87,14 +87,15 @@
           <source src="https://files.codingninjas.in/restaurant-1706081051.webm" type="video/webm">
           Your browser does not support the video tag.
         </video>
-        
       </div>
     </div>
     <div class="row" id="menu-items"></div>
   </div>
+
   <script src="app.js"></script>
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
+
